# RandomForest

./: CMakeLists.txt  main.cpp
Dataset/: Dataset.cpp  Dataset.h  IndexedFeature.h  MetaData.h  StoredTree.h  SubDataset.h  Subdataset.cpp  Subdataset.h
Generics/: Generics.h  TypeDefs.h
Global/: GlobalConsts.h
Parallel/: AtomicMarkablePtr.h  Job.h  JobQueue.h  LockFreeSkipList.h  SkipListNode.h
Predictor/: Discriminator.h  ParallelTreePredictor.cpp  ParallelTreePredictor.h  TreePredictor.cpp  TreePredictor.h
Splitter/: ClaSplitManipulator.h  ClassificationSplitManipulator.h  RegSplitManipulator.h  RegressionSplitManipulator.h  SplitInfo.h  SplitManipulator.h  Splitter.cpp  Splitter.h  SplitterImpl.cpp  SplitterImpl.h  TreeNodeSplitter.cpp  TreeNodeSplitter.h
Test/: RandomDataset.h  SkipListTest.h  UnitTest.h
Trainer/: ForestTrainer.cpp  ForestTrainer.h  TreeTrainer.cpp  TreeTrainer.h
Tree/: ForestParams.h  NodeStats.cpp  NodeStats.h  ParallelTreeNode.h  StoredTree.h  TreeNode.h  TreeParams.h
TreeBuilder/: ForestBuilder.cpp  ForestBuilder.h  ParallelTreeBuilder.cpp  ParallelTreeBuilder.h  SingleTreeBuildDriver.cpp  SingleTreeBuildDriver.h  TreeBuilder.cpp  TreeBuilder.h
Util/: Cost.cpp  Cost.h  Maths.h  Random.cpp  Random.h
